--- a/src/components/EmailList.css
+++ b/src/components/EmailList.css
@@ -14,6 +14,17 @@
     overflow: scroll;
 }
 
+/* Hide scroll bar for Chrome, Safari and Opera */
+.emailList::-webkit-scrollbar{
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.emailList{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 .emailList__settings{
     position: sticky;
     top: 0;
@@ -33,4 +44,8 @@
     background-color: white;
     z-index: 999;
 
+}
+
+.emailList__list{
+    padding-bottom: 20%;
 }
